# Parking-Lot-System-Project

./: CMakeLists.txt  README.md  parking.db  parking_server
frontend/: index.html
src/: ParkingLot.cpp  ParkingLot.hpp  main.cpp
